--- a/name.html
+++ b/name.html
@@ -21,7 +21,7 @@
 
         <form action="" method="get">
             <div class="form">
-            <input type="text" name="director_name" placeholder="Entre o nome do Diretor" />
+            <input type="text" name="director_name" placeholder="Entre com o nome do Diretor" />
         </div>
             <div class="form">
             <input type="submit" value="Submit" />
