--- a/html/home.html
+++ b/html/home.html
@@ -12,6 +12,9 @@
     <title>home</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Rubik:wght@500&display=swap');
+</style>
 <link rel="stylesheet" type="text/css"   href="/css/style.css">
 <script>
             function change(){
@@ -27,9 +30,10 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
+    <div id="center">
     <p>Written and Directed by</p>
     <p onclick="change()" id="name">Who?</p>
-
+    </div>
 </body>
 
 </html>
