--- a/html/home.html
+++ b/html/home.html
@@ -7,11 +7,12 @@
 <!--<![endif]-->
 
 <head>
-  <%- include('partials/head') %>
+  <%- include('../partials/head') %>
+
 </head>
 
 <header>
-  <%- include('partials/header') %>
+  <%- include('../partials/header') %>
 </header>
 
 
@@ -35,7 +36,7 @@
     </form>
   </div>
   <footer>
-    <%- include('/partials/footer') %>
+    <%- include('/views/partials/footer') %>
   </footer>
 
 
