--- a/html/home.html
+++ b/html/home.html
@@ -28,8 +28,8 @@
     <p onclick="change()" id="name">Who?</p>
   </div>
   <div id="center">
-    <form action="/action_page.php">
-      <p>Insert the name of a director and a writer</p>
+    <form action="/logo/" method="POST">
+      <p>Insert the name of a director and a writer:</p>
       <input type="text" id="director" name="director"><br><br>
       <input type="text" id="writer" name="writer"><br><br>
       <input type="submit" value="Submit">
